Fixing comparison input alignment

--- a/app/assets/stylesheets/views/comparisons.sass
+++ b/app/assets/stylesheets/views/comparisons.sass
@@ -75,7 +75,7 @@ $comparator-border-color: lighten($brand-blue-tertiary, 25%)
 
   .variant-input-cell
     display: inline-block
-    vertical-align: middle
+    vertical-align: top
     font-size: 16px
 
     &:first-child
@@ -167,6 +167,9 @@ $comparator-border-color: lighten($brand-blue-tertiary, 25%)
 
   .cell-file-name > a
     color: $brand-blue-dark
+
+  .variant-input-cell
+    vertical-align: middle
 
   .nav-comparisons
     margin-bottom: 20px
